--- a/hobby/index.html
+++ b/hobby/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My photography</title>
     <link rel="stylesheet" href="style.css" />
-    <title>My photography website</title>
   </head>
-
   <body>
-    <div>
-      <h1>Nomad Photography</h1>
-      <img
-        class="image"
-        src="image/Photo1.jpeg"
-        alt="photo"
-        style="background-size: cover; background-position: center"
-      />
-    </div>
+    <h1>My Photography</h1>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Service</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quis, mollitia
+      a cumque itaque ullam, blanditiis, dignissimos dolore at veniam hic et
+      nihil eligendi libero saepe dicta quaerat sequi iste?
+    </p>
   </body>
 </html>
