--- a/hobby/index.html
+++ b/hobby/index.html
@@ -3,21 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My photography</title>
+    <title>Foto's</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My Photography</h1>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Service</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quis, mollitia
-      a cumque itaque ullam, blanditiis, dignissimos dolore at veniam hic et
-      nihil eligendi libero saepe dicta quaerat sequi iste?
-    </p>
+    <div class="Main">
+      <div class="navbar">
+        <div class="icon"></div>
+       <h2 class="logo">Fotos</h2>
+    </div>
+
+    <div class="menu">
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">SERVICE</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+        
+    
   </body>
 </html>
